fix: Fix warning "An illegal reflective access operation has occurred" when running zpa-toolkit with Java 11